--- a/src/App.css
+++ b/src/App.css
@@ -8,27 +8,31 @@
 }
 
 body {
-  background-color: rgb(179, 196, 245);
   height: 100%;
   width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-image: url("./assets/password.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .container {
   width: 500px;
   height: fit-content;
-  background-color: white;
-  box-shadow: 0px 4px 8px;
+  background-color: #2aa0a9;
+  box-shadow: 0px 4px 20px;
   margin-top: 160px;
   border-radius: 8px;
+
 }
 
 h3 {
-  font-size: 28px;
+  font-size: 30px;
   font-weight: 600;
-  color: rgb(86, 137, 248);
+  color: rgb(39, 40, 43);
   text-align: center;
   padding-top: 10px;
 
@@ -38,25 +42,30 @@ h3 {
   padding: 20px;
   display: flex;
   flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .password p {
   font-weight: bold;
   margin-bottom: 5px;
-  font-size: 18px;
+  font-size: 20px;
+  color: rgb(8, 41, 67);
 }
 
 .password input {
-  width: 400px;
+  width: 180px;
   padding: 5px;
   outline: none;
 }
 
-.errorMessage{
-  color: red;
+.errorMessage {
+  color: rgb(170, 9, 9);
   margin-top: 10px;
-  font-size: 15px;
+  font-size: 17px;
   width: 500px;
+  text-align: center;
 }
 
 .condition {
@@ -66,16 +75,16 @@ h3 {
   font-size: 16px;
   font-weight: 450;
   margin-bottom: 20px;
+  color: rgb(8, 41, 67);
 }
 
 .condition input {
   margin-right: 10px;
-
 }
 
 button {
   width: 200px;
-  background-color: rgb(10, 128, 206);
+  background-color: rgb(42, 54, 78);
   padding: 5px;
   border: none;
   font-size: 15px;
@@ -85,7 +94,7 @@ button {
 }
 
 button:hover {
-  background-color: rgb(7, 99, 160);
+  background-color: rgb(19, 24, 33);
 }
 
 .result {
@@ -102,10 +111,10 @@ button:hover {
 .result button {
   width: 50px;
   padding: 6px;
-  background-color: rgb(9, 144, 9);
+  background-color: rgb(42, 54, 78);
   border: none;
 }
 
 .result button:hover {
-  background-color: rgb(5, 108, 5);
+  background-color: rgb(19, 24, 33);
 }
